--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<section class="board">
+		<header>
+			<input type="text" placeholder="Player 1 Name">
+		</header>
+
+		<main class="board">
 			<section class="column" id="c1">
 				<section class="row" id="r1"></section>
 				<section class="row" id="r2"></section>
@@ -30,7 +34,7 @@
 			</section>
 
 
-		</section>
+		</main>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
