--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<body>
 		<header>
 			<input type="text" placeholder="Player 1 Name">
+			<button id="userPlay">Play!</button>
+			<button id="autoPlay">Auto</button>
 		</header>
 
 		<main class="board">
@@ -34,6 +36,7 @@
 			</section>
 		</main>
 		<h2><h2>
+
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
