--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 	<body>
 		<header>
 			<input type="text" placeholder="Player 1 Name">
+			<button id="userPlay">Play!</button>
+			<button id="autoPlay">Auto</button>
 		</header>
+		<h2 class="state"></h2>
 
 		<main class="board">
 			<section class="column" id="c1">
@@ -32,9 +35,9 @@
 				<section class="row" id="r8"></section>
 				<section class="row" id="r9"></section>
 			</section>
-
-
 		</main>
+		<h2><h2>
+
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
