--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 			<button id="userPlay">Play!</button>
 			<button id="autoPlay">Auto</button>
 		</header>
-		<h2 class="state"></h2>
 
 		<main class="board">
 			<section class="column" id="c1">
@@ -36,7 +35,7 @@
 				<section class="row" id="r9"></section>
 			</section>
 		</main>
-		<h2><h2>
+		<h2 class="gameState"><h2>
 
 
 		<script type="text/javascript" src="js/main.js"></script>
