--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 				<section class="row" id="r9"></section>
 			</section>
 		</main>
+		<span class="gameState"></span>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
