fixed player name

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 	</head>
 	<body>
 		<header>
-			<input type="text" placeholder="Player 1 Name">
-			<button id="userPlay">Play!</button>
-			<button id="autoPlay">Auto</button>
+			<button id="userPlay">You v CPU</button>
+			<button id="autoPlay">CPU v CPU</button>
 		</header>
 
 		<main class="board">
