Updated Read Me

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
-    	<meta name="keywords" content="one, two, three">
+    	<meta name="description" content="simple TicTacToe game utilizing javascript and object-oriented programming">
+    	<meta name="keywords" content="tictactoe, game, ui">
 
 		<title>TicTacToe</title>
 
